# the-forest-palette

./: README.md  pyproject.toml  setup.py
examples/: visualise_colors.py
the_forest_palette/: __init__.py  palette.py
the_forest_palette.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
