# the-forest-palette/pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-forest-palette"
version = "1.0.1"
authors = [
  { name="Beth O'Dwyer", email="odwyerbeth621@gmail.com" },
]
description = "A package for custom matplotlib color palettes"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/elodwyer1/the-forest-palette/"
Issues = "https://github.com/elodwyer1/the-forest-palette/issues"